--- a/package.json
+++ b/package.json
@@ -9,19 +9,55 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@azure-rest/ai-inference": "^1.0.0-beta.6",
+    "@azure/core-auth": "^1.9.0",
+    "@azure/openai": "^2.0.0",
+    "@clerk/backend": "^2.3.0",
+    "@clerk/nextjs": "^6.23.0",
+    "@neondatabase/serverless": "^1.0.1",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tanstack/react-query": "^5.81.2",
+    "@tiptap/extension-bullet-list": "^2.23.0",
+    "@tiptap/extension-heading": "^2.23.0",
+    "@tiptap/extension-list-item": "^2.23.0",
+    "@tiptap/extension-ordered-list": "^2.23.0",
+    "@tiptap/extension-underline": "^2.23.0",
+    "@tiptap/pm": "^2.23.0",
+    "@tiptap/react": "^2.23.0",
+    "@tiptap/starter-kit": "^2.23.0",
+    "ai": "^4.3.16",
+    "axios": "^1.10.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.44.2",
+    "eventsource-parser": "^3.0.3",
+    "framer-motion": "^12.19.2",
+    "gsap": "^3.13.0",
+    "lucide-react": "^0.523.0",
+    "next": "15.3.4",
+    "ogl": "^1.0.11",
+    "openai-edge": "^1.2.2",
+    "pg": "^8.16.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.4"
+    "tailwind-merge": "^3.3.1",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.4",
+    "typescript": "^5"
   }
 }
